--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول - CimaStream</title>
+    <title>تسجيل الدخول - CimaExtreame</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 
     <header>
         <div class="container">
-            <a href="index.html" class="logo">CimaStream</a>
+            <a href="index.html" class="logo">CimaExtreame</a>
             <nav>
                 <ul>
                     <li><a href="index.html">الرئيسية</a></li>
@@ -38,7 +38,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2025 CimaStream. جميع الحقوق محفوظة.</p>
+            <p>&copy; 2025 CimaExtreame. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
     <script src="script.js"></script>
