--- a/frontend/movie-detail.html
+++ b/frontend/movie-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تفاصيل الفيلم - CimaStream</title>
+    <title>تفاصيل الفيلم - CimaExtreame</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -58,7 +58,7 @@
 
     <header>
         <div class="container">
-            <a href="index.html" class="logo">CimaStream</a>
+            <a href="index.html" class="logo">CimaExtreame</a>
             <nav>
                 <ul>
                     <li><a href="index.html">الرئيسية</a></li>
@@ -75,7 +75,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 CimaStream. جميع الحقوق محفوظة.</p>
+            <p>&copy; 2025 CimaExtreame. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
 
