--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إنشاء حساب - CimaStream</title>
+    <title>إنشاء حساب - CimaExtreame
+    </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +12,7 @@
 
     <header>
         <div class="container">
-            <a href="index.html" class="logo">CimaStream</a>
+            <a href="index.html" class="logo">CimaExtreame</a>
             <nav>
                 <ul>
                     <li><a href="index.html">الرئيسية</a></li>
@@ -25,7 +26,7 @@
             <main class="auth-page">
         <div class="auth-form">
             
-            <img src="logo.png" alt="CimaStream" class="auth-logo">
+            <img src="logo.png" alt="CimaExtreame" class="auth-logo">
             
             <h2>تسجيل الدخول</h2> <form id="loginForm">
             ```
@@ -57,7 +58,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 CimaStream. جميع الحقوق محفوظة.</p>
+            <p>&copy; 2025 CimaExtreame. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
 
